<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A40808"
    android:textAlignment="viewStart"
    tools:context=".dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A40808"
        android:textAlignment="viewStart"
        tools:context=".dashboard">

        <Button
            android:id="@+id/button"
            android:layout_width="94dp"
            android:layout_height="86dp"
            android:layout_marginHorizontal="170dp"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="94dp"
            android:layout_height="86dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu" />

        <TextView
            android:id="@+id/textSpeakingName"
            android:layout_width="281dp"
            android:layout_height="91dp"
            android:fontFamily="@font/baloo"
            android:text="@string/speaking"
            android:textColor="#FEEDED"
            android:textColorHighlight="#FCC8C8"
            android:textSize="60sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.815"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.881" />

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/constraintLayout"
            android:layout_width="412dp"
            android:layout_height="655dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageMenu"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textSpeaking1"
                android:layout_width="244dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/app_name"
                android:text="@string/speaking_name"
                android:textAlignment="textStart"
                android:textColor="#930707"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.016"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textSpeaking2"
                android:layout_width="386dp"
                android:layout_height="175dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.447"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking1" />

            <TextView
                android:id="@+id/textSpeaking3"
                android:layout_width="359dp"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name2"
                android:textColor="#930707"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking2" />

            <TextView
                android:id="@+id/textSpeaking4"
                android:layout_width="375dp"
                android:layout_height="61dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.447"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking3" />

            <TextView
                android:id="@+id/textSpeaking5"
                android:layout_width="359dp"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name4"
                android:textColor="#930707"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking4" />

            <TextView
                android:id="@+id/textSpeaking6"
                android:layout_width="370dp"
                android:layout_height="124dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.447"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking5" />

            <TextView
                android:id="@+id/textSpeaking7"
                android:layout_width="359dp"
                android:layout_height="34dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name6"
                android:textColor="#930707"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking6" />

            <TextView
                android:id="@+id/textSpeaking8"
                android:layout_width="370dp"
                android:layout_height="124dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/speaking_name7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.447"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSpeaking7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>